--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content="Sys Admin - DevOps/SRE Junior - K8S Enjoyer" />
         <meta name="author" content="" />
         <title>Freelancer - Start Bootstrap Theme</title>
         <!-- Favicon-->
@@ -184,31 +184,18 @@
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
-                    <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
-                        <p class="lead mb-0">
-                            Saint Gely du Fesc
-                            <br />
-                            Herault, France 34980
-                        </p>
-                    </div>
-                    <!-- Footer Social Icons-->
+                        <p class="lead mb-0">Saint Gely du Fesc<br>Herault, France 34980</p>
                     </div>
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/damien-hoh-/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/DevOpsDamien/" target="_blank"><i class="fab fa-fw fa-github"></i></a>
-                </div>
-
-                    <!-- Footer About Text-->
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/damien-hoh-/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://devopsdamien.github.io/" target="_blank"><i class="fab fa-fw fa-github"></i></a>
+                    </div>
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About Freelancer</h4>
-                        <p class="lead mb-0">
-                            Freelance is a free to use, MIT licensed Bootstrap theme created by
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
-                            .
-                        </p>
+                        <p class="lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
                     </div>
                 </div>
             </div>
