--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Sys Admin - DevOps/SRE Junior - K8S Enjoyer" />
+        <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Freelancer - Start Bootstrap Theme</title>
         <!-- Favicon-->
@@ -47,7 +47,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+                <p class="masthead-subheading font-weight-light mb-0">Sys Admin - DevOps/SRE Junior - K8S Enjoyer</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -95,17 +95,21 @@
         </section>
         <!-- About Section-->
         <section class="page-section bg-primary text-white mb-0" id="about">
-            <div class="container">
-                <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
-                <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
+        <div class="container">
+            <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <h4 class="text-uppercase mb-3">About Me</h4>
+                    <p class="lead">Coming from a professional reconversion, I aspire to work in the field of digital technology, particularly in Cloud & DevOps technologies. Enthusiastic DevOps Junior with knowledge of resolving customer problems, I work to increase success through effective work strategies and customer service. With my first professional experience in a versatile mission, I wish to change horizons and start a new chapter in my career.</p>
                 </div>
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <p class="lead">Coming from a professional reconversion, I aspire to work in the field of digital technology, particularly in Cloud & DevOps technologies. Enthusiastic DevOps Junior with knowledge of resolving customer problems, I work to increase success through effective work strategies and customer service. With my first professional experience in a versatile mission, I wish to change horizons and start a new chapter in my career.</p>
-                    </div>
+                <div class="col-lg-6">
+                    <h4 class="text-uppercase mb-3">About This Project</h4>
+                    <p class="lead">This website is self-hosted on a Raspberry Pi with a transparent IPS display. It is powered by a lightweight Nginx web server running in a Docker container, deployed via Kubernetes (K3s). The project showcases my ability to configure and deploy web applications on minimal hardware while maintaining reliability and scalability.</p>
                 </div>
             </div>
         </section>
