--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/img/avatar.png" alt="..." />
+                <img class="masthead-img img-fluid rounded mt-3" src="assets/img/ecran.jpg" alt="Transparent Screen">
+
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">DevOps Portfolio</h1>
                 <!-- Icon Divider-->
