--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/img/avatar.png" alt="..." />
-                <img class="masthead-img img-fluid rounded mt-3" src="assets/img/ecran.jpg" alt="Transparent Screen">
-
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">DevOps Portfolio</h1>
                 <!-- Icon Divider-->
@@ -50,6 +48,9 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Sys Admin - DevOps/SRE Junior - K8S Enjoyer</p>
+                <div class="masthead-image">
+                    <img class="masthead-img img-fluid rounded mt-3" src="assets/img/ecran.jpg" alt="Transparent Screen">
+                </div>
             </div>
         </header>
         <!-- Portfolio Section-->
