--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/it-infrastructure.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/infra.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -230,9 +230,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/it-infrastructure.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/infra.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">This project involved setting up Linux servers to host company services, implementing monitoring with Prometheus Grafana Stack, prioritizing Docker for deployments, and using Ansible for configuration. Additionally, it covered Windows administration tasks such as networking, scripting, and Active Directory management.</p>
                                     <div class="d-flex justify-content-center gap-2">
                                         <button class="btn btn-primary" data-bs-dismiss="modal">
                                             <i class="fas fa-xmark fa-fw"></i>
@@ -270,7 +270,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cloud-computing_0.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">This project automates the deployment of an AWS EKS cluster using Terraform, Git, and Jenkins. It involves provisioning an EC2 instance with Jenkins, writing and pushing Terraform code for EKS to GitHub, creating a Jenkins pipeline to deploy the cluster, and configuring a proxy with ELB for public access</p>
                                     <div class="d-flex justify-content-center gap-2">
                                         <button class="btn btn-primary" data-bs-dismiss="modal">
                                             <i class="fas fa-xmark fa-fw"></i>
@@ -308,7 +308,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/logo_open_telemetry.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">This DevOps project deploys the OpenTelemetry Astronomy Shop app (Otel Demo) to demonstrate collecting metrics, logs, and traces from microservices running in containers or Kubernetes. OpenTelemetry (OTel) is a vendor-agnostic observability standard under CNCF. The demo includes built-in monitoring with Jaeger, Grafana, and Prometheus, but can be extended to other observability platforms like Datadog, New Relic, and Splunk.</p>
                                     <div class="d-flex justify-content-center gap-2">
                                         <button class="btn btn-primary" data-bs-dismiss="modal">
                                             <i class="fas fa-xmark fa-fw"></i>
