--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@
                             <img class="img-fluid" src="assets/img/portfolio/logo_open_telemetry.png" alt="..." />
                         </div>
                     </div>
+                    
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                    <!-- Image miniature (à adapter selon ton repo d’images) -->
+                            <img class="img-fluid" src="assets/img/portfolio/wikiviews.png" alt="WikiViews Project" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
                 </div>
             </div>
         </section>
@@ -293,7 +306,9 @@
         <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-labelledby="portfolioModal3" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
-                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
+                    <div class="modal-header border-0">
+                        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
                     <div class="modal-body text-center pb-5">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -309,7 +324,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/logo_open_telemetry.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This DevOps project deploys the OpenTelemetry Astronomy Shop app (Otel Demo) to demonstrate collecting metrics, logs, and traces from microservices running in containers or Kubernetes. OpenTelemetry (OTel) is a vendor-agnostic observability standard under CNCF. The demo includes built-in monitoring with Jaeger, Grafana, and Prometheus, but can be extended to other observability platforms like Datadog, New Relic, and Splunk.</p>
+                                    <p class="mb-4">
+                                        This DevOps project deploys the OpenTelemetry Astronomy Shop app (Otel Demo) to demonstrate collecting metrics, logs, and traces from microservices running in containers or Kubernetes. OpenTelemetry (OTel) is a vendor-agnostic observability standard under CNCF. The demo includes built-in monitoring with Jaeger, Grafana, and Prometheus, but can be extended to other observability platforms like Datadog, New Relic, and Splunk.
+                                    </p>
                                     <div class="d-flex justify-content-center gap-2">
                                         <button class="btn btn-primary" data-bs-dismiss="modal">
                                             <i class="fas fa-xmark fa-fw"></i>
@@ -326,6 +343,57 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- Portfolio Modal 4-->
+        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" aria-labelledby="portfolioModal4" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header border-0">
+                        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body text-center pb-5">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">WikiViews Project</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/wikiviews.png" alt="WikiViews screenshot" />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-4">
+                                        Ce projet “WikiViews” compare la popularité de différentes pages Wikipédia :
+                                        l’utilisateur doit deviner laquelle a le plus de vues sur une période donnée !
+                                        L’application est conteneurisée et déployée sur mon Raspberry Pi, dans un cluster K3s.
+                                        Elle interagit en temps réel avec l’API PageViews de Wikipédia pour récupérer
+                                        les statistiques de consultation. Un bon exercice d’intégration DevOps et de
+                                        services externes !
+                                    </p>
+                                    <div class="d-flex justify-content-center gap-2">
+                                        <button class="btn btn-primary" data-bs-dismiss="modal">
+                                            <i class="fas fa-xmark fa-fw"></i>
+                                            Close Window
+                                        </button>
+                                        <!-- Lien vers le projet -->
+                                        <a href="http://82.65.73.9:30080" class="btn btn-success" target="_blank">
+                                            <i class="fas fa-external-link-alt fa-fw"></i>
+                                            Visit WikiViews
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
