--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                                             Close Window
                                         </button>
                                         <!-- Lien vers le projet -->
-                                        <a href="http://wikigame.h2odevops.com" class="btn btn-success" target="_blank">
+                                        <a href="https://wikigame.h2odevops.com" class="btn btn-success" target="_blank">
                                             <i class="fas fa-external-link-alt fa-fw"></i>
                                             Visit WikiViews
                                         </a>
